# postagram-backend

./: pyproject.toml
src/apps/core/: routers.py
src/apps/core/abstract/: models.py  serializers.py  viewsets.py
src/apps/core/auth/: apps.py  permissions.py  tests.py
src/apps/core/auth/serializers/: __init__.py  login.py  register.py
src/apps/core/auth/viewsets/: __init__.py  login.py  refresh.py  register.py
src/apps/core/comment/: apps.py  models.py  serializers.py  viewsets.py
src/apps/core/comment/migrations/: 0001_initial.py  0002_alter_comment_options.py  0003_alter_comment_post.py
src/apps/core/comment/tests/: test_models.py  test_viewsets.py
src/apps/core/fixtures/: comment.py  post.py  user.py
src/apps/core/post/: apps.py  models.py  serializers.py  viewsets.py
src/apps/core/post/migrations/: 0001_initial.py  0002_alter_post_options.py
src/apps/core/post/tests/: test_models.py  test_viewsets.py
src/apps/core/user/: apps.py  like_manager.py  models.py  serializers.py  viewsets.py
src/apps/core/user/migrations/: 0001_initial.py  0002_user_avatar_user_bio.py  0003_alter_user_created_alter_user_updated.py  0004_user_posts_liked.py  0005_alter_user_avatar.py  0006_user_comments_liked.py  0007_alter_user_avatar.py
src/apps/core/user/tests/: test_models.py  test_viewsets.py
src/config/: settings.py  urls.py
